// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should correctly render ExpenseSummary with 1 expense 1`] = `
<div>
  <h1>
    Viewing  
    23
     
    expenses
      totalling R$ 
    235,123,409.87
     
  </h1>
</div>
`;

exports[`should correctly render ExpenseSummaryPage with 1 expense 1`] = `
<div>
  <h1>
    Viewing  
    1
     
    expense
      totalling R$ 
    2.35
     
  </h1>
</div>
`;
